# hiviewdfx_hichecker

./: BUILD.gn  README.en.md  README.md  README_zh.md  bundle.json  hichecker.gni  hichecker.yaml  ohos.build
frameworks/native/: BUILD.gn  caution.cpp  hichecker.cpp  hichecker_wrapper.cpp
frameworks/native/hichecker_asan/: BUILD.gn  hichecker_asan.cpp
interfaces/ets/ani/: BUILD.gn
interfaces/ets/ani/hichecker/: BUILD.gn
interfaces/ets/ani/hichecker/ets/: @ohos.hichecker.ets
interfaces/ets/ani/hichecker/include/: ani_hichecker.h
interfaces/ets/ani/hichecker/src/: ani_hichecker.cpp
interfaces/js/: bundle.json
interfaces/js/kits/napi/: BUILD.gn
interfaces/js/kits/napi/include/: napi_hichecker.h
interfaces/js/kits/napi/js_leak_watcher/: BUILD.gn  js_leak_watcher.js  js_leak_watcher.ts  js_leak_watcher_module.cpp  js_leak_watcher_napi.cpp  js_leak_watcher_napi.h
interfaces/js/kits/napi/src/: napi_hichecker.cpp
interfaces/native/: bundle.json
interfaces/native/innerkits/: BUILD.gn  hichecker.para  hichecker.para.dac
interfaces/native/innerkits/include/: caution.h  hichecker.h  hichecker_asan.h  hichecker_wrapper.h  js_leak_watcher_ts.h
interfaces/native/innerkits/src/: js_leak_watcher_ts.cpp
test/: BUILD.gn
test/fuzztest/hichecker_fuzzer/: hichecker_fuzzer.cpp  hichecker_fuzzer.h  project.xml
test/scripts/: readme.md
test/scripts/testModule/: test_hichecker.py  test_jsleakwatcher_auto.py  test_jsleakwatcher_semiauto.py  utils.py
test/unittest/common/native/: hichecker_native_test.cpp  js_leak_watcher_napi_test.cpp  js_leak_watcher_ts_test.cpp
