# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")

native_module_output_path = "hichecker/hichecker"

config("hichecker_config_test") {
  visibility = [ ":*" ]

  include_dirs = [
    ".",
    "../interfaces/native/innerkits/include",
  ]
}

ohos_unittest("HiCheckerNativeTest") {
  module_out_path = native_module_output_path

  configs = [ ":hichecker_config_test" ]

  sources = [ "unittest/common/native/hichecker_native_test.cpp" ]

  deps = [ "../interfaces/native/innerkits:libhichecker" ]
}

config("js_leak_watcher_config_test") {
  visibility = [ ":*" ]

  include_dirs = [
    ".",
    "../interfaces/js/kits/napi/js_leak_watcher",
  ]

  defines = [ "JS_LEAK_WATCHER_TEST" ]
}

ohos_unittest("JsLeakWatcherNapiTest") {
  module_out_path = native_module_output_path

  configs = [ ":js_leak_watcher_config_test" ]

  sources = [
    "unittest/common/native/js_leak_watcher_napi_test.cpp",
    "../interfaces/js/kits/napi/js_leak_watcher/js_leak_watcher_napi.h",
    "../interfaces/js/kits/napi/js_leak_watcher/js_leak_watcher_napi.cpp",
  ]

  external_deps = [
    "ace_engine:libace_compatible",
    "c_utils:utils",
    "ets_runtime:libark_jsruntime",
    "eventhandler:libeventhandler",
    "hilog:libhilog",
    "ipc:ipc_single",
    "napi:ace_napi",
    "window_manager:libwm",
  ]

  cflags = [ "-fstack-protector-strong" ]
}

group("unittest") {
  testonly = true
  deps = [
    ":HiCheckerNativeTest",
    ":JsLeakWatcherNapiTest",
  ]
}

ohos_fuzztest("HicheckerFuzzTest") {
  module_out_path = native_module_output_path
  fuzz_config_file = "fuzztest/hichecker_fuzzer"
  include_dirs = [
    "fuzztest/hichecker_fuzzer",
    "../interfaces/native/innerkits/include",
  ]
  sources = [ "fuzztest/hichecker_fuzzer/hichecker_fuzzer.cpp" ]
  deps = [ "../interfaces/native/innerkits:libhichecker" ]
}

group("hichecker_fuzztest") {
  testonly = true
  deps = [ ":HicheckerFuzzTest" ]
}