# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_source_set("libhichecker_source") {
  include_dirs =
      [ "//base/hiviewdfx/hichecker/interfaces/native/innerkits/include" ]

  sources = [
    "caution.cpp",
    "hichecker.cpp",
  ]

  deps = [ "//base/hiviewdfx/faultloggerd/interfaces/innerkits/dump_catcher:lib_dfx_dump_catcher" ]

  external_deps = [ "hilog_native:libhilog" ]

  part_name = "hichecker"
  subsystem_name = "hiviewdfx"
}
