# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/hiviewdfx/hichecker/hichecker.gni")
import("//build/ohos.gni")

if (hichecker_support_asan) {
  ohos_source_set("libhichecker_asan_source") {
    include_dirs =
        [ "//base/hiviewdfx/hichecker/interfaces/native/innerkits/include" ]

    sources = [ "hichecker_asan.cpp" ]

    external_deps = [
      "access_token:libaccesstoken_sdk",
      "bundle_framework:appexecfwk_base",
      "bundle_framework:appexecfwk_core",
      "c_utils:utils",
      "hilog_native:libhilog",
      "ipc:ipc_core",
      "samgr:samgr_proxy",
    ]

    part_name = "hichecker_native"
    subsystem_name = "hiviewdfx"
  }
}
