# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../../../hichecker.gni")

config("hichecker_native_config") {
  visibility = [ ":*" ]

  include_dirs = [ "include" ]
}

ohos_prebuilt_etc("hichecker.para") {
  source = "hichecker.para"
  install_images = [
    "system",
    "updater",
  ]
  module_install_dir = "etc/param"
  part_name = "hichecker"
  subsystem_name = "hiviewdfx"
}

ohos_prebuilt_etc("hichecker.para.dac") {
  source = "hichecker.para.dac"
  install_images = [
    "system",
    "updater",
  ]
  module_install_dir = "etc/param"
  part_name = "hichecker"
  subsystem_name = "hiviewdfx"
}

group("hichecker_etc") {
  deps = [
    ":hichecker.para",
    ":hichecker.para.dac",
  ]
}

ohos_shared_library("libhichecker") {
  public_configs = [ ":hichecker_native_config" ]

  deps = [
    ":hichecker_etc",
    "../../../frameworks/native:libhichecker_source",
  ]
  external_deps = [ "hilog:libhilog" ]

  output_extension = "so"
  innerapi_tags = [ "platformsdk" ]
  part_name = "hichecker"
  subsystem_name = "hiviewdfx"
}
