# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/components/ets_frontend/ets2abc_config.gni")
import("//build/ohos.gni")

ohos_shared_library("hichecker_ani") {
  shlib_type = "ani"
  include_dirs = [ "include/", ]

  sources = [ "./src/ani_hichecker.cpp" ]

  deps = [ "../../../native/innerkits:libhichecker" ]

  external_deps = [
    "hilog:libhilog",
    "runtime_core:ani",
  ]

  subsystem_name = "hiviewdfx"
  part_name = "hichecker"
  output_extension = "so"
}

generate_static_abc("hichecker") {
  base_url = "./ets"
  files = [ "./ets/@ohos.hichecker.ets" ]
  is_boot_abc = "True"
  device_dst_file = "/system/framework/hichecker.abc"
}

ohos_prebuilt_etc("hichecker_etc") {
  source = "$target_out_dir/hichecker.abc"
  module_install_dir = "framework"
  subsystem_name = "hiviewdfx"
  part_name = "hichecker"
  deps = [ ":hichecker" ]
}
