# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos/ace/ace.gni")

config("hichecker_js_source_config") {
  visibility = [ ":*" ]

  include_dirs =
      [ "//base/hiviewdfx/hichecker/interfaces/native/innerkits/include" ]
}

ohos_shared_library("hichecker") {
  include_dirs = [
    "./",
    "include/",
    "//third_party/node/src",
    "//foundation/arkui/napi/interfaces/kits",
  ]

  configs = [ ":hichecker_js_source_config" ]

  sources = [ "./src/napi_hichecker.cpp" ]

  deps = [
    "//base/hiviewdfx/hichecker/interfaces/native/innerkits:libhichecker",
    "//foundation/arkui/napi:ace_napi",
  ]

  external_deps = [ "hilog_native:libhilog" ]

  relative_install_dir = "module"

  subsystem_name = "hiviewdfx"
  part_name = "hichecker_js"
}
